--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helo",
   "version": "0.1.0",
   "private": true,
-  "main": "server.index.js",
+  "main": "server/index.js",
   "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.18.0",
