--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "massive": "^5.5.1",
