--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "massive": "^5.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
